# naocpp_sayhello

./: CMakeLists.txt  README.md  main.cpp  qiproject.xml
build-mytoolchain/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  dependencies.cmake  qitest.cmake
build-mytoolchain/sdk/: qitest.json
build-mytoolchain/sdk/share/qi/: path.conf
